--- a/test_ws/src/drone_description/config/joint_names_drone_description.yaml
+++ b/test_ws/src/drone_description/config/joint_names_drone_description.yaml
@@ -1,1 +1,1 @@
-controller_joint_names: ['', 'front_arm_joint', 'front_right_prop_joint', 'front_left_prop_joint', 'back_arm_joint', 'back_right_prop_joint', 'back_left_prop_joint', ]
+controller_joint_names: ['', 'front_arm_joint', 'front_right_prop_joint', 'front_right_wing_joint','front_left_prop_joint', 'front_left_wing_joint', 'back_arm_joint', 'back_right_prop_joint', 'back_right_wing_joint', 'back_left_prop_joint', 'back_left_wing_joint',]
